Exercicio 2 - Branch - segundo teste

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Teste</h1>
     <p>Exercicio 1 - Commit</p>
     <p>Exercicio 2 - Branch</p>
+    <p>Exercicio 2 - Branch - segundo teste</p>
 </body>
 </html>
