Exercicio 3 - Merge - segundo teste

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Exercicio 1 - Commit</p>
     <p>Exercicio 2 - Branch</p>
     <p>Exercicio 2 - Branch - segundo teste</p>
+    <p>Exercicio 3 - Merge - segundo teste</p>
 </body>
 </html>
